<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 툴바 레이아웃 불러오기 -->
    <include
        layout="@layout/my_page_toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/et_profileimage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass,MissingConstraints"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="@+id/et_profileimage"
        app:layout_constraintStart_toStartOf="@+id/et_profileimage"
        app:layout_constraintTop_toTopOf="@+id/et_profileimage"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_profile"
        android:linksClickable="true"
        android:autoLink=""
        app:layout_constraintEnd_toEndOf="@+id/et_profileimage"
        app:layout_constraintStart_toStartOf="@+id/et_profileimage"
        app:layout_constraintTop_toTopOf="@+id/et_profileimage"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:background="#C2C2C2"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile"
        app:layout_constraintStart_toStartOf="@+id/edit_profile"
        app:layout_constraintTop_toTopOf="@+id/edit_profile"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/my_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:text="@string/my_review"
        android:textSize="20sp"
        android:linksClickable="true"
        android:autoLink=""
        app:layout_constraintEnd_toEndOf="@+id/edit_profile"
        app:layout_constraintStart_toStartOf="@+id/edit_profile"
        app:layout_constraintTop_toTopOf="@+id/edit_profile"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/add_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="50dp"
        android:text="@string/add_shop"
        android:textSize="20sp"
        android:linksClickable="true"
        android:autoLink=""
        app:layout_constraintEnd_toEndOf="@+id/my_review"
        app:layout_constraintStart_toStartOf="@+id/my_review"
        app:layout_constraintTop_toTopOf="@+id/my_review"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/my_added_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="50dp"
        android:text="@string/my_added_shop"
        android:textSize="20sp"
        android:linksClickable="true"
        android:autoLink=""
        app:layout_constraintEnd_toEndOf="@+id/add_shop"
        app:layout_constraintStart_toStartOf="@+id/add_shop"
        app:layout_constraintTop_toTopOf="@+id/add_shop"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/customer_inquiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="50dp"
        android:text="@string/customer_inquiry"
        android:textSize="20sp"
        android:linksClickable="true"
        android:autoLink=""
        app:layout_constraintEnd_toEndOf="@+id/my_added_shop"
        app:layout_constraintStart_toStartOf="@+id/my_added_shop"
        app:layout_constraintTop_toTopOf="@+id/my_added_shop"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>