<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpMain">

    <TextView
        android:id="@+id/sign_up_main_info_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_main_info_text1"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_main_info_image_view"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="100dp"/>

    <ImageView
        android:id="@+id/sign_up_main_info_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shop"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_info_text_view1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_main_info_text_view2"/>

    <TextView
        android:id="@+id/sign_up_main_info_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_main_info_text2"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_info_image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/sign_in_button"
        android:background="@drawable/rounded_button1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:text="@string/sign_up_main_sign_up_button_text"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_info_text_view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        android:layout_marginHorizontal="120dp"
        android:layout_marginVertical="24dp"/>

    <Button
        android:id="@+id/sign_up_button"
        android:background="@drawable/rounded_button2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="onClick"
        android:text="@string/sign_up_main_sign_in_button_text"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guest_in_button"
        android:layout_marginHorizontal="120dp"
        android:layout_marginVertical="24dp" />

    <TextView
        android:id="@+id/guest_in_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/sign_up_main_sign_in_guest_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>