<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="">

    <TextView
        android:layout_marginTop="180dp"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="로그인 하고"
        android:textSize="16dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/shop"
        app:layout_constraintBottom_toTopOf="@+id/button_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dp"
        android:text="함께 포장마차 즐기기!"
        android:textColor="@color/black"
        android:textSize="16dp"
        />
    <!--  <com.kakao.usermgmt.LoginButton
        android:id="@+id/loginButton"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/radius2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent">
    </com.kakao.usermgmt.LoginButton>-->
    <!--
        <LinearLayout
            android:id="@+id/button_frame"
            android:layout_width="403dp"
            android:layout_height="406dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">-->

    <Button
        android:id="@+id/email_button"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/radius"
        android:drawableLeft="@drawable/smile"
        android:drawablePadding="5dp"
        android:gravity="left|center_vertical"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/email_login"
        android:textColor="#ffffff"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/kakao_login_button_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <FrameLayout
        android:id="@+id/kakao_login_button_frame"
        android:layout_width="138dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/radius2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_gravity="center_horizontal"
        app:layout_constraintRight_toRightOf="parent">

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/kakao_login_button"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_marginBottom="192dp"
            android:background="@drawable/radius2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/fake_kakao"
            android:layout_width="138dp"
            android:layout_height="56dp"
            android:src="@drawable/kakao_login" />
    </FrameLayout>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/sign_up_radius"
        android:drawableLeft="@drawable/user_plus"
        android:drawablePadding="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="left|center_vertical"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kakao_login_button_frame" />

    <TextView
        android:id="@+id/no_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nologin"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.303" />

    <!--</LinearLayout>-->


</LinearLayout>